# MongoDBComponents

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  MongoDBConfig.cmake.in
src/Components/: CMakeLists.txt  CMakeLists.txt~
src/Components/CIPGenerator/: CIPGenerator.cpp  CIPGenerator.hpp  CMakeLists.txt
src/Components/CIPReader/: CIPReader.cpp  CIPReader.hpp  CMakeLists.txt
src/Components/ModelReader/: CMakeLists.txt  ModelReader.cpp  ModelReader.hpp
src/Components/ModelRemover/: CMakeLists.txt  ModelRemover.cpp  ModelRemover.hpp
src/Components/ModelWriter/: CMakeLists.txt  ModelWriter.cpp  ModelWriter.hpp
src/Components/MongoDBExporter/: CMakeLists.txt  MongoDBExporter.cpp  MongoDBExporter.hpp
src/Components/MongoDBImporter/: CMakeLists.txt  MongoDBImporter.cpp  MongoDBImporter.hpp
src/Components/MongoPerformanceReaderTester/: CMakeLists.txt  MongoPerformanceReaderTester.cpp  MongoPerformanceReaderTester.hpp
src/Components/MongoPerformanceWriterTester/: .directory  CMakeLists.txt  MongoPerformanceTester.cpp  MongoPerformanceTester.hpp
src/Components/SceneReader/: CMakeLists.txt  SceneReader.cpp  SceneReader.hpp
src/Components/SceneRemover/: CMakeLists.txt  SceneRemover.cpp  SceneRemover.hpp
src/Components/SceneWriter/: CMakeLists.txt  SceneWriter.cpp  SceneWriter.hpp
src/Components/ViewReader/: CMakeLists.txt  ViewReader.cpp  ViewReader.hpp
src/Components/ViewRemover/: CMakeLists.txt  ViewRemover.cpp  ViewRemover.hpp
src/Components/ViewWriter/: CMakeLists.txt  ViewWriter.cpp  ViewWriter.hpp
src/Components/python/: app.py
src/Types/: AddVector.hpp  Document.hpp  Model.hpp  MongoProxy.hpp  PrimitiveFile.hpp  Scene.hpp  View.hpp
src/cmake/Modules/: FindMongoDB.cmake  FindMongoDB.cmake~
src/python/: upload_views.py  web_application.py  web_application.py~
tasks/: CIPGenerator.xml  dzialanie.txt  export2MongoDB.xml  importFromMongoDB.xml  readFromScenes.xml  readLogs100Document.csv  readLogs100Grid.csv  readLogs100Grid.ods  readLogs100GridOK.csv  readLogs100GridOK.ods  readOneModelFromMongoDB.xml  readOneModelFromMongoDB.xml~  readViewFromMongoDB.xml  readViewFromMongoDB.xml~  removeModel.xml  removeScene.xml  removeView.xml  results.csv  results500Grid.csv  results900Document.csv  results900Grid.csv  results900Grid.ods  resultsDocument100.csv  resultsGrid100.csv  resultsGrid100.ods  tempFile.txt  writeAndReadMongoDB.xml  writeModel2MongoDB.xml  writeScene2MongoDB.xml  writeView2MongoDB.xml
tasks/results/: grid400.ods  results100Doc.csv  results100Grid.csv  results2500GRID.csv
